# cpp_cmake_template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
src/: CMakeLists.txt
src/hello_world/: CMakeLists.txt
src/hello_world/src/: main.cpp
src/math/: CMakeLists.txt
src/math/cmake/: catch2_tests.cmake
src/math/include/math/: math.h
src/math/src/: add.cpp  multiply.cpp
toolchains/: android.cmake
